@@ -88,6 +88,8 @@ Version 1.4.6 - CVS
     import plugins.
   - Undefined variable in vcard.php.
   - Added bincimap (#1285099), dovecot and mercury32 presets.
+  - Make test for IE6 in SendDownloadHeaders also match versions higher
+    than 6 (#1339211).
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
